# tasker

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  setup.py  tasker.py
tasks/: __init__.py  module1.py
