[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tasker"
version = '0.3'
authors = [{name = "Vyacheslav Rafalskiy", email = "rafalskiy@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3 :: Only',
        'Intended Audience :: Developers',
        'Operating System :: OS Independent',
    ]
#py_modules=['tasker']
description="Organizer for project's scripts"
requires-python = '>=3.6'

[project.urls]
Home='https://github.com/s4g/tasker'
